# bk_data_analysis_studies

./: .gitignore  pyproject.toml
da_case_studies/ch01-hotels_data_collect/: ch01-hotels_data_collect.ipynb
da_case_studies/ch02-football_manager_successs/: ch02-football_manager_success.ipynb
da_case_studies/ch02-hotels_data_prep/: ch02-hotels_data_prep.ipynb
da_case_studies/ch02-immunization_crosscountry/: ch02-immunization_crosscountry.ipynb
da_case_studies/ch03-city_size_japan/: ch03_city_size_japan.ipynb
da_case_studies/ch03-distributions_height_income/: ch03-distributions_height_income.ipynb
da_case_studies/ch03-football_home_advantage_describe/: ch03-football_home_advantage_describe.ipynb
da_case_studies/ch03-hotels_europe_compare/: ch03-hotels_europe_compare.ipynb
da_case_studies/ch03-hotels_vienna_explore/: ch03-hotels_vienna_explore.ipynb
da_case_studies/ch04-management_firm_size/: ch04-wms_management_size.ipynb  ch04-wms_management_size_boxplot_violin.ipynb
da_case_studies/ch05-stock_market_loss_generalize/: ch05-stock_market_loss_generalize.ipynb
da_data_exercises/ch01-origins_of_data/: 01-hotels_vienna.ipynb  04-used_cars_prices.ipynb  04-used_cars_prices.py
da_data_exercises/ch02-preparing_data_for_analysis/: 01-hotels_europe.ipynb  02-used_cars_prices_cleaning.ipynb  04-world_bank_immunization.ipynb  05-football.ipynb
da_data_exercises/ch03-exploratory_data_analysis/: 01-EDA_hotels_europe.ipynb  README.md  extra-EDA_brl_football.ipynb  main.py
da_data_repo/airbnb/: README_dat_airbnb.md
da_data_repo/arizona-electricity/: README.txt
(+128 files in other folders)
